# BlazyShorts

./: Cargo.toml  README.md  TODO.md
common/: Cargo.toml
common/src/: lib.rs
common/src/api/: add_link_api.rs  base_api.rs  mod.rs
server/: .gitignore  Cargo.toml
server/src/: database.rs  main.rs
server/src/contollers/: add_link.rs  mod.rs  redirector.rs
server/src/core/: error_to_response.rs  id_generator.rs  mod.rs
server/src/data/: app_state.rs  db.rs  mod.rs
server/src/middleware/: logger.rs  mod.rs
src/: app.rs  main.rs
webapp/: Cargo.toml
webapp/src/: app.rs
webapp/src/app/components/: home.rs  info.rs  links.rs  mod.rs
webapp_dioxus/: Cargo.toml  Dioxus.toml
webapp_dioxus/src/: main.rs
webapp_dioxus/src/components/: app.rs  footer.rs  generate_link.rs  header.rs  link_list.rs  mod.rs
