[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0"
surrealdb = "1.0.0-beta.9"
tokio = { version = "1.0", features = ["full"] }
url = "2.3.1"
